# EDFlib-qt

./: CMakeLists.txt  EDFLib.pro  LICENSE  README.md
examples/: examples.pro
examples/simpleEDFFileReading/: main.cpp  simpleEDFFileReading.pro
examples/simpleEDFFileWriting/: main.cpp  simpleEDFFileWriting.pro
src/: CMakeLists.txt  EDFAnnotation.cpp  EDFAnnotation.h  EDFDate.cpp  EDFDate.h  EDFError.cpp  EDFError.h  EDFFile.cpp  EDFFile.h  EDFFileHeader.cpp  EDFFileHeader.h  EDFFileManager.cpp  EDFFileManager.h  EDFMeasurementSetup.cpp  EDFMeasurementSetup.h  EDFPatient.cpp  EDFPatient.h  EDFSignalData.cpp  EDFSignalData.h  EDFSignalHeader.cpp  EDFSignalHeader.h  EDFTime.cpp  EDFTime.h  src.pro
unitTests/: CMakeLists.txt  unitTests.pro
unitTests/EDFFileTests/: BoostTest.cpp  BoostTest.h  CMakeLists.txt  EDFFileTests.pro  boost_path_variables.pri  tst_edfannotation.cpp  tst_edfdate.cpp  tst_edffile.cpp  tst_edffileheader.cpp  tst_edfmeasurementsetup.cpp  tst_edfpatient.cpp  tst_edfsignaldata.cpp  tst_edfsignalheader.cpp  tst_edftime.cpp
